--- a/common/common.scss
+++ b/common/common.scss
@@ -570,7 +570,7 @@ nav.post-controls .actions > button.reply:last-child:hover * {
 
 /* header */
 .drop-down-mode .d-header-icons .active .icon {
-    border: 1px solid transparent;
+    //border: 1px solid transparent;
     border-radius: 100%;
     background: rgba(var(--tertiary-rgb), 0.2);
 }
