--- a/common/common.scss
+++ b/common/common.scss
@@ -346,7 +346,7 @@ input:hover,
     justify-content: right;
 }
 
-@media(max-width: 100%) {
+@media(max-width: 500px) {
     .desktop-view #navigation-bar {
         flex-wrap: nowrap;
         width: 100%;
@@ -638,8 +638,19 @@ nav.post-controls .actions > button.reply:last-child:hover * {
     border: none;
 }
 .d-header {
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.16);
+    //box-shadow: 0 2px 6px rgba(0, 0, 0, 0.16);
+    border-bottom: 1px solid var(--surface-high-contrast);
+    box-shadow: none;
+    height: 72px;
 }
+
+.d-header #site-text-logo:before {
+    display: block;
+    height: 42px;
+    margin-left: 8px;
+    margin-right: 30px;
+    width: 28px;
+
 .btn.btn-sidebar-toggle:active {
     border: none;
 }
