--- a/common/common.scss
+++ b/common/common.scss
@@ -650,6 +650,7 @@ nav.post-controls .actions > button.reply:last-child:hover * {
     margin-left: 8px;
     margin-right: 30px;
     width: 28px;
+}
 
 .btn.btn-sidebar-toggle:active {
     border: none;
