--- a/common/common.scss
+++ b/common/common.scss
@@ -15,7 +15,7 @@
 body {
     //font-family: -apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif;
     font-family: Consolas, Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace;;
-
+}
 
 /* 全局 按钮 Global button */
 .docker-manager .btn, 
