--- a/common/common.scss
+++ b/common/common.scss
@@ -362,7 +362,7 @@ input:hover,
         width: 100%;
         justify-content: center;
     }
-    
+
     .nav-pills li>a {
         font-family: "Inter", sans-serif;
         font-weight: 500;
@@ -372,6 +372,7 @@ input:hover,
         color: var(--fg-low-contrast);
         padding: 0 0;
         position: relative;
+    }
 }
 
 
