--- a/common/common.scss
+++ b/common/common.scss
@@ -1,7 +1,7 @@
 :root{
     --btn-default-border: var(--primary-300);
     --btn-default-hover: var(--tertiary-800);
-    --d-button-border-radius: 6px;
+    --d-button-border-radius: 20px;
     --btn-box-shadow: 0 2px 0 rgba(0,0,0,.02);
     --d-input-border-radius: 6px;
     --ant-radius: 6px;
@@ -13,8 +13,8 @@
 }
 
 body {
-    //font-family: -apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif;
-    font-family: Consolas, Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace;
+    font-family: -apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif;
+    //font-family: Consolas, Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace;
 }
 
 
