--- a/common/common.scss
+++ b/common/common.scss
@@ -351,6 +351,7 @@ input:hover,
 
 @media(max-width: 500px) {
     #navigation-bar {
+        white-space: pre;
         display: flex;
         flex-wrap: wrap;
         margin: 0;
