--- a/common/common.scss
+++ b/common/common.scss
@@ -359,7 +359,7 @@ input:hover,
         margin-right: auto;
     }
     .navigation-container #navigation-bar {
-        display: flex;
+        //display: flex;
         grid-area: navigation;
         grid-column: -1 / 1;
         grid-row: 2;
