--- a/common/common.scss
+++ b/common/common.scss
@@ -1172,5 +1172,5 @@ aside.onebox {
 .navigation-container {
     width: 100%;
     --nav-space: 0.75em;
-    //display: flex;
+    display: flow;
   }
