--- a/common/common.scss
+++ b/common/common.scss
@@ -1174,7 +1174,7 @@ aside.onebox {
 .navigation-container {
     width: 100%;
     --nav-space: 0.75em;
-    display: flow;
+    //display: flow;
     margin-bottom: 25px;
     font-size: 0.8706em;
   }
